Fixing wrapping in FF

--- a/modules/widgets/optionable-title/title.scss
+++ b/modules/widgets/optionable-title/title.scss
@@ -58,6 +58,7 @@ $module: '.optionable-title';
       .key, .value {
         display:inline-block;
         vertical-align:middle;
+        white-space: nowrap;
       }
       .key {
         margin-right:10px;
